yamls/v1/2-heroes-v1-vtl-svc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: heroes
spec:
  host: heroes
  subsets:
    - name: v1
      labels:
        version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: heroes-vtl-svc
spec:
  hosts:
    - "*"
  gateways:
    - istio-gateway
  http:
    - match:
        - uri:
            prefix: /heroes/
      rewrite:
        uri: /
      route:
        - destination:
            host: heroes.default.svc.cluster.local
            port:
              number: 3000
