yamls/v1/4-villains.yaml
# villains v1 deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: villains-v1
  labels:
    app: villains
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: villains
      version: v1
  template:
    metadata:
      labels:
        app: villains
        version: v1
    spec:
      containers:
        - name: villains
          image: villain-service:v1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000

# villains Service
---
apiVersion: v1
kind: Service
metadata:
  name: villains
  labels:
    app: villains
    service: villains
spec:
  ports:
    - port: 3000
      name: http
  selector:
    app: villains
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: villains
spec:
  host: villains
  subsets:
    - name: v1
      labels:
        version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: villains-vtl-svc
spec:
  hosts:
    - "*"
  gateways:
    - istio-gateway
  http:
    - match:
        - uri:
            prefix: /villain-service/
      rewrite:
        uri: /
      route:
        - destination:
            host: villains.default.svc.cluster.local
            port:
              number: 3000
